--- a/project/catalog.html
+++ b/project/catalog.html
@@ -139,9 +139,7 @@
 
                                 <span></span>
                                 <ul>
-                                    <li class="level2">
-                                        <a href="#">"СОЛОВЕЙ"</a>
-                                    </li>
+                                    
 
                                     <li class="level2">
                                         <a href="#">iPhone б/у</a>
@@ -228,8 +226,8 @@
                                 <a href="404.html"><img src="img/products/solovev.png" alt=""></a>
                             </div>
                             <div class="product-details">
-                                <h4 class="tovarname"><a href="404.html">"СОЛОВЕЙ"</a></h4>
-                                <p>Влади́мир Соловьёв-российский журналист,телеведущий,пропагандист.</p>
+                                <h4 class="tovarname"><a href="404.html">"Соловьев"</a></h4>
+                                <p>Влади́мир Рудо́льфович Соловьёв — российский журналист, радио- и телеведущий, пропагандист. Ведущий программы «Вечер с Владимиром Соловьёвым» на телеканале Россия-1. </p>
                                 <div class="product-bottom-details d-flex justify-content-between">
                                     <div class="price">
                                          $30
@@ -282,7 +280,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>ы
+                        </div>
                     </div>
                 
             </div>
